# advanced-python-course-spring-2023

./: .gitignore
hw1/: pyproject.toml  requirements.txt
hw1/src/hw1/: __main__.py  _fib.py  ast_.py
hw2/: Dockerfile  __init__.py  __main__.py  docker-compose.yml  entrypoint.sh  requirements.txt
hw2/artifacts/: repo-link.txt  table.tex
hw2/src/hw2/: __init__.py  __main__.py
