[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced_python_course_spring_2023_hw1_MrFang"
authors = [
    { name = "MrFang", email="bat312@yandex.ru" }
]
version = "0.0.2"
description = "First home assigment for python course in HSE"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.7.0",
    "networkx==3.0",
]